--- a/pattern-lab/public/patterns/05-assembly-_styleguide/index.html
+++ b/pattern-lab/public/patterns/05-assembly-_styleguide/index.html
@@ -30,10 +30,10 @@
 <div class="sg-main" role="main">
   <!-- Patterns -->
   <div id="sg-patterns">
-                  <div id="viewall-units-_content-types" class="sg-subtype">
+                  <div id="viewall-assembly-_styleguide" class="sg-subtype">
   <h2>
-    <a href="../../patterns/04-units-_content-types/index.html" class="patternLink" data-patternpartial="viewall-units-_content-types">
-      _content types
+    <a href="../../patterns/05-assembly-_styleguide/index.html" class="patternLink" data-patternpartial="viewall-assembly-_styleguide">
+      _styleguide
     </a>
   </h2>
   
@@ -44,7 +44,7 @@
 </div><!--end .sg-main-->
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-units-_content-types"}
+  {"patternPartial":"viewall-assembly-_styleguide"}
 </script>
 
 <script>
