--- a/pattern-lab/public/patterns/02-chunks-menus-superfish-superfish/02-chunks-menus-superfish-superfish.html
+++ b/pattern-lab/public/patterns/02-chunks-menus-superfish-superfish/02-chunks-menus-superfish-superfish.html
@@ -4,9 +4,9 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1573857963" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1573857963" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1573857963" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1573858954" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1573858954" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1573858954" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1573857963" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1573857963" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1573858954" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1573858954" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -104,10 +104,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1573857963">
+<script id="pl-js-polyfill-insert-1573858954">
   (function() {
     if (self != top) {
-      var cb = '1573857963';
+      var cb = '1573858954';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -117,10 +117,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1573857963">
+<script id="pl-js-insert-1573858954">
   (function() {
     if (self != top) {
-      var cb = '1573857963';
+      var cb = '1573858954';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
@@ -136,7 +136,7 @@
   <script src="../../js/jquery.once.min.js"></script>
   <script src="../../js/select2/select2.min.js"></script>
   <script src="../../js/stacktable/stacktable.min.js"></script>
-  <script src="../../../../components/_patterns/05-assembly/styleguide/styleguide.js"></script>
+  <script src="../../../dist/05-assembly/_styleguide/styleguide.js"></script>
   <script>Drupal.attachBehaviors();</script>
   <script>
     $("select").once('selects').each(function(){  
