--- a/pattern-lab/public/patterns/01-parts-01-icons-icons/01-parts-01-icons-icons.html
+++ b/pattern-lab/public/patterns/01-parts-01-icons-icons/01-parts-01-icons-icons.html
@@ -4,9 +4,10 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574194631" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574194631" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574194631" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574271020" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574271020" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574271020" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574194631" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574194631" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574271020" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574271020" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -26,25 +27,24 @@
   	<div class="visually-hidden">
   		<div id="tabs" class="tabs"></div>
   	</div>
-<p>The icon sprite is generated from all individual svg files in /theme_name/images/icons/src and output in /dist/svg/.sprite.css.svg. <strong>ALL ICON FILES MUST BE THE SAME SIZE (currently 80x80 pixels).</strong> Size for individual icons can adjusted with theming later.</p>
 
 
 <div class="icons-demo pl-spacer" id="icons">
 
-			<div><span class="pl sprite-drupal sprite-icon"></span><p>Drupal</p></div>
-			<div><span class="pl sprite-facebook sprite-icon"></span><p>Facebook</p></div>
-			<div><span class="pl sprite-twitter sprite-icon"></span><p>Twitter</p></div>
-			<div><span class="pl sprite-linkedin sprite-icon"></span><p>LinkedIn</p></div>
-			<div><span class="pl sprite-youtube sprite-icon"></span><p>YouTube</p></div>
-			<div><span class="pl sprite-pdf sprite-icon"></span><p>PDF</p></div>
-			<div><span class="pl sprite-word sprite-icon"></span><p>Word</p></div>
-			<div><span class="pl sprite-excel sprite-icon"></span><p>Excel</p></div>
-			<div><span class="pl sprite-powerpoint sprite-icon"></span><p>Powerpoint</p></div>
+			<div><span class="pl sprite-drupal sprite-icon"></span></div>
+			<div><span class="pl sprite-facebook sprite-icon"></span></div>
+			<div><span class="pl sprite-twitter sprite-icon"></span></div>
+			<div><span class="pl sprite-linkedin sprite-icon"></span></div>
+			<div><span class="pl sprite-youtube sprite-icon"></span></div>
+			<div><span class="pl sprite-pdf sprite-icon"></span></div>
+			<div><span class="pl sprite-word sprite-icon"></span></div>
+			<div><span class="pl sprite-excel sprite-icon"></span></div>
+			<div><span class="pl sprite-powerpoint sprite-icon"></span></div>
 	
 </div>
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"cssEnabled":false,"lineage":[],"lineageR":[],"patternBreadcrumb":{"patternType":"parts","patternSubtype":"icons"},"patternDesc":"<h3>How to use icons<\/h3>\n\n<p>We are using a gulp SVG sprite generator, which automatically creates the SVG CSS in <code>_icon_sprite.scss<\/code>. Simply add separate SVG files into <code>theme_name\/images\/icons\/src\/<\/code> and they will be added to the sprite the next time <code>gulp icons<\/code> is run.  Sass Mixins and classes will be automagically generated in _icon_sprite.scss.<\/p>","patternExtension":"twig","patternName":"Icons Test","patternPartial":"parts-icons","patternState":"","extraOutput":[]}
+  {"cssEnabled":false,"lineage":[],"lineageR":[],"patternBreadcrumb":{"patternType":"parts","patternSubtype":"icons"},"patternDesc":"","patternExtension":"twig","patternName":"icons","patternPartial":"parts-icons","patternState":"","extraOutput":[]}
 </script>
 
 <script>
@@ -78,10 +78,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574194631">
+<script id="pl-js-polyfill-insert-1574271020">
   (function() {
     if (self != top) {
-      var cb = '1574194631';
+      var cb = '1574271020';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -91,10 +91,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574194631">
+<script id="pl-js-insert-1574271020">
   (function() {
     if (self != top) {
-      var cb = '1574194631';
+      var cb = '1574271020';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
