--- a/pattern-lab/public/patterns/04-units/index.html
+++ b/pattern-lab/public/patterns/04-units/index.html
@@ -4,9 +4,10 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574194631" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574194631" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574194631" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574271020" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574271020" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574271020" media="all" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574194631" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574194631" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574271020" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574271020" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -30,10 +31,30 @@
 <div class="sg-main" role="main">
   <!-- Patterns -->
   <div id="sg-patterns">
-                  <div id="viewall-units-_content-types" class="sg-subtype">
+                  <div id="viewall-units-dashboard" class="sg-subtype">
   <h2>
-    <a href="../../patterns/04-units-_content-types/index.html" class="patternLink" data-patternpartial="viewall-units-_content-types">
-      _content types
+    <a href="../../patterns/04-units-01-dashboard/index.html" class="patternLink" data-patternpartial="viewall-units-dashboard">
+      dashboard
+    </a>
+  </h2>
+  
+  <div class="sg-pattern-body">
+    
+  </div>
+</div>                        <div id="viewall-units-content-types" class="sg-subtype">
+  <h2>
+    <a href="../../patterns/04-units-02-content-types/index.html" class="patternLink" data-patternpartial="viewall-units-content-types">
+      content types
+    </a>
+  </h2>
+  
+  <div class="sg-pattern-body">
+    
+  </div>
+</div>                        <div id="viewall-units-search" class="sg-subtype">
+  <h2>
+    <a href="../../patterns/04-units-03-search/index.html" class="patternLink" data-patternpartial="viewall-units-search">
+      search
     </a>
   </h2>
   
@@ -78,10 +99,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574194631">
+<script id="pl-js-polyfill-insert-1574271020">
   (function() {
     if (self != top) {
-      var cb = '1574194631';
+      var cb = '1574271020';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -91,10 +112,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574194631">
+<script id="pl-js-insert-1574271020">
   (function() {
     if (self != top) {
-      var cb = '1574194631';
+      var cb = '1574271020';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
