--- a/pattern-lab/public/styleguide/html/styleguide.html
+++ b/pattern-lab/public/styleguide/html/styleguide.html
@@ -4,9 +4,9 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574286313" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574286313" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574286313" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574288344" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574288344" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574288344" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574286313" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574286313" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574288344" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574288344" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -91,7 +91,7 @@
   <div class="sg-pattern-body">
     <h1>Upstream Style Guide</h1>
 
-<h2 id="group-materials" class="group-title" data-anchor="materials">Materials</h2>
+<h2 id="group-materials" class="group-title">Materials</h2>
   </div>
 </div>                        <div id="viewall-base-colors" class="sg-subtype">
   <h2>
@@ -323,7 +323,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h2 id="group-parts" class="group-title" data-anchor="parts">Parts</h2>
+    <h2 id="group-parts" class="group-title">Parts</h2>
   </div>
 </div>                        <div id="viewall-parts-icons" class="sg-subtype">
   <h2>
@@ -708,7 +708,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h2 id="group-chunks" class="group-title" data-anchor="chunks">Chunks</h2>
+    <h2 id="group-chunks" class="group-title">Chunks</h2>
   </div>
 </div>                        <div id="viewall-chunks-navigation" class="sg-subtype">
   <h2>
@@ -728,7 +728,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-navigation" class="sub-group-title" data-anchor="navigation"> Navigation</h3>
+    <h3 id="group-navigation" class="sub-group-title"> Navigation</h3>
   </div>
 </div>                        <div id="chunks-breadcrumbs" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -874,7 +874,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-in-page-nav" class="sub-group-title" data-anchor="in-page-nav">In Page Nav</h3>
+    <h3 id="group-in-page-nav" class="sub-group-title">In Page Nav</h3>
   </div>
 </div>                        <div id="chunks-widget-anchors" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -1044,7 +1044,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h2 id="group-composites" class="group-title" data-anchor="composites">Composites</h2>
+    <h2 id="group-composites" class="group-title">Composites</h2>
   </div>
 </div>                        <div id="viewall-composites-blocks" class="sg-subtype">
   <h2>
@@ -1064,7 +1064,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-blocks-test" class="sub-group-title" data-anchor="blocks">Blocks</h3>
+    <h3 id="group-blocks" class="sub-group-title">Blocks</h3>
   </div>
 </div>                        <div id="composites-branding" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -1235,7 +1235,7 @@
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-paragraphs" class="sub-group-title" data-anchor="paragraphs">Paragraphs</h3>
+    <h3 id="group-paragraphs" class="sub-group-title">Paragraphs</h3>
   </div>
 </div>                        <div id="composites-accordion-group" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -1641,7 +1641,7 @@ STYLEGUIDE ONLY: This template is not used in Drupal.
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-views" class="sub-group-title" data-anchor="views">Card Views</h3>
+    <h3 id="group-views" class="sub-group-title">Card Views</h3>
   </div>
 </div>                        <div id="composites-views-cards" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -1688,7 +1688,7 @@ STYLEGUIDE ONLY: This template is not used in Drupal.
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-layout" class="sub-group-title" data-anchor="layout">Layout</h3>
+    <h3 id="group-layout" class="sub-group-title">Layout</h3>
   </div>
 </div>                        <div id="composites-site-header" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -1912,7 +1912,7 @@ STYLEGUIDE ONLY: This template is not embedded into Drupal, but the blocks will 
   </h2>
   
   <div class="sg-pattern-body">
-    <h2 id="group-units" class="group-title" data-anchor="units">Units</h2>
+    <h2 id="group-units" class="group-title">Units</h2>
   </div>
 </div>                        <div id="viewall-units-dashboard" class="sg-subtype">
   <h2>
@@ -1942,7 +1942,7 @@ STYLEGUIDE ONLY: This template is not embedded into Drupal, but the blocks will 
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-content-types" class="sub-group-title" data-anchor="content-types">Content Types</h3>
+    <h3 id="group-content-types" class="sub-group-title">Content Types</h3>
   </div>
 </div>                        <div id="viewall-units-search" class="sg-subtype">
   <h2>
@@ -1962,7 +1962,7 @@ STYLEGUIDE ONLY: This template is not embedded into Drupal, but the blocks will 
   </h2>
   
   <div class="sg-pattern-body">
-    <h3 id="group-search" class="sub-group-title" data-anchor="search">Site Search</h3>
+    <h3 id="group-search" class="sub-group-title">Site Search</h3>
   </div>
 </div>                        <div id="units-site-search" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -2051,10 +2051,10 @@ STYLEGUIDE ONLY: This template is not embedded into Drupal, but the blocks will 
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574286313">
+<script id="pl-js-polyfill-insert-1574288344">
   (function() {
     if (self != top) {
-      var cb = '1574286313';
+      var cb = '1574288344';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -2064,10 +2064,10 @@ STYLEGUIDE ONLY: This template is not embedded into Drupal, but the blocks will 
   })();
 </script>
 
-<script id="pl-js-insert-1574286313">
+<script id="pl-js-insert-1574288344">
   (function() {
     if (self != top) {
-      var cb = '1574286313';
+      var cb = '1574288344';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
