--- a/pattern-lab/public/patterns/01-parts-03-buttons/index.html
+++ b/pattern-lab/public/patterns/01-parts-03-buttons/index.html
@@ -4,9 +4,9 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574288344" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574288344" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574288344" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574289196" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574289196" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574289196" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574288344" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574288344" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574289196" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574289196" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -66,12 +66,26 @@
         </li>
         <li class="group-nav-item parent-group">
           <a href="#" class="nav-group-link" data-group-target="units">Units</a>
-          <ul class="sub-group-patterns mouse-h-shim">
+          <ul class="sub-group-patterns">
             <li class="sub-group-nav-item">
               <a href="#" class="sub-nav-group-link" data-group-target="content-types">Content Types</a>
             </li>
             <li class="sub-group-nav-item">
               <a href="#" class="sub-nav-group-link" data-group-target="search">Site Search</a>
+            </li>
+          </ul>
+        </li>
+        <li class="group-nav-item parent-group">
+          <a href="#" class="nav-group-link">Device View</a>
+          <ul class="sub-group-patterns">
+            <li class="sub-group-nav-item">
+              <a href="#" class="sub-nav-group-link" data-device="Desktop">Desktop</a>
+            </li>
+            <li class="sub-group-nav-item">
+              <a href="#" class="sub-nav-group-link" data-device="Full">Tablet</a>
+            </li>
+            <li class="sub-group-nav-item">
+              <a href="#" class="sub-nav-group-link" data-device="Full">Mobile</a>
             </li>
           </ul>
         </li>
@@ -161,10 +175,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574288344">
+<script id="pl-js-polyfill-insert-1574289196">
   (function() {
     if (self != top) {
-      var cb = '1574288344';
+      var cb = '1574289196';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -174,10 +188,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574288344">
+<script id="pl-js-insert-1574289196">
   (function() {
     if (self != top) {
-      var cb = '1574288344';
+      var cb = '1574289196';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
