--- a/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.html
+++ b/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.html
@@ -4,9 +4,13 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574289955" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574289955" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574289955" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1574371529" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1574371529" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
@@ -17,8 +21,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574289955" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574289955" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574371529" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574371529" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -76,7 +80,7 @@
           </ul>
         </li>
         <li class="group-nav-item parent-group">
-          <a href="#" class="nav-group-link">Device View</a>
+          <a href="#" class="nav-group-link devices">Device View</a>
           <ul class="sub-group-patterns">
             <li class="sub-group-nav-item">
               <a href="#" class="sub-nav-group-link" data-device="desktop">Desktop</a>
@@ -154,10 +158,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574289955">
+<script id="pl-js-polyfill-insert-1574371529">
   (function() {
     if (self != top) {
-      var cb = '1574289955';
+      var cb = '1574371529';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -167,10 +171,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574289955">
+<script id="pl-js-insert-1574371529">
   (function() {
     if (self != top) {
-      var cb = '1574289955';
+      var cb = '1574371529';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
@@ -186,6 +190,9 @@
   <script src="../../js/jquery.once.min.js"></script>
   <script src="../../js/select2/select2.min.js"></script>
   <script src="../../js/stacktable/stacktable.min.js"></script>
+  <script src="../../js/slick/slick.min.js"></script>
+  <script src="../../js/featherlight/featherlight.min.js"></script>
+  <script src="../../js/featherlight/featherlight.gallery.min.js"></script>
   <script src="../../js/styleguide.js"></script>
   <script>Drupal.attachBehaviors();</script>
   <script>
