--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
@@ -4,13 +4,13 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1574372184" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1574372184" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1574440444" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1574440444" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
@@ -21,8 +21,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574372184" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574372184" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574440444" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574440444" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -96,10 +96,87 @@
       </ul>
     </div>
 
+	<div class="typography-element">
+		<div class="element-title">H1</div>
+		<div class="constrain-text">
+			<h1>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h1>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H2</div>
+		<div class="constrain-text">
+			<h2>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h2>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H3</div>
+		<div class="constrain-text">
+			<h3>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h3>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H4</div>
+		<div class="constrain-text">
+			<h4>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h4>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H5</div>
+		<div class="constrain-text">
+			<h5>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h5>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H6</div>
+		<div class="constrain-text">
+			<h6>
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+							</h6>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">H1 on Image Header</div>
+		<div class="layout__region--content banner-title">
+			<div class="block-field-banner">
+				<img src="http://placeimg.com/1500/900/nature" alt="Banner Nature Image" />
+			</div>
+			<div class="block-title">
+				<h1>
+											Quae cum essent dicta
+									</h1>
+			</div>
+		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">Paragraph</div>
+		<div class="constrain-text">
+			<p>
+									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
+							</p>
+		</div>
+	</div>
+
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"cssEnabled":false,"lineage":[],"lineageR":[],"patternBreadcrumb":{"patternType":"parts","patternSubtype":"typography"},"patternDesc":"","patternExtension":"twig","patternName":"Typography","patternPartial":"parts-typography","patternState":"","extraOutput":[]}
+  {"cssEnabled":false,"lineage":[],"lineageR":[],"patternBreadcrumb":{"patternType":"parts","patternSubtype":"typography"},"patternDesc":"","patternExtension":"twig","patternName":"typography","patternPartial":"parts-typography","patternState":"","extraOutput":[]}
 </script>
 
 <script>
@@ -133,10 +210,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574372184">
+<script id="pl-js-polyfill-insert-1574440444">
   (function() {
     if (self != top) {
-      var cb = '1574372184';
+      var cb = '1574440444';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -146,10 +223,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574372184">
+<script id="pl-js-insert-1574440444">
   (function() {
     if (self != top) {
-      var cb = '1574372184';
+      var cb = '1574440444';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
