--- a/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
+++ b/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
@@ -1,14 +1,15 @@
-<ul class="fonts pl-spacer">
+
+<ul class="fonts pl-spacer constrain-text">
       <li>
       <div class="font-info" style="font-family: &quot;Open Sans&quot;, Helvetica, Arial, sans-serif;">
         <span style="font-size: 32px;">Open Sans</span> <br/>
-                				  <p>Doner biltong turducken leberkas. Rump swine pork loin ribeye ball tip meatloaf, pork chop ground round pig pancetta cow biltong brisket. Beef corned beef beef ribs, bacon pork belly sausage meatball boudin doner ham hock. Swine gro.</p>
+                				  <p>Bush tomato gumbo potato garbanzo ricebean burdock daikon coriander kale quandong. Bok choy celery leek avocado shallot horseradish aubergine parsley. Bok choy bell pepper kale celery desert raisin kakadu plum bok choy bunya nuts.</p>
 				      </div>
     </li>
       <li>
       <div class="font-info" style="font-family: Georgia, &quot;Times New Roman&quot;, Times, serif;">
         <span style="font-size: 32px;">Georgia</span> <br/>
-                				  <p>Doner biltong turducken leberkas. Rump swine pork loin ribeye ball tip meatloaf, pork chop ground round pig pancetta cow biltong brisket. Beef corned beef beef ribs, bacon pork belly sausage meatball boudin doner ham hock. Swine gro.</p>
+                				  <p>Bush tomato gumbo potato garbanzo ricebean burdock daikon coriander kale quandong. Bok choy celery leek avocado shallot horseradish aubergine parsley. Bok choy bell pepper kale celery desert raisin kakadu plum bok choy bunya nuts.</p>
 				      </div>
     </li>
   </ul>
