--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.html
@@ -4,13 +4,14 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1574441242" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1574441242" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1574448715" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1574448715" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1574448715" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
@@ -21,8 +22,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574441242" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574441242" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1574448715" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1574448715" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -96,11 +97,12 @@
       </ul>
     </div>
 
+
 	<div class="typography-element">
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h1>
 		</div>
 	</div>
@@ -109,7 +111,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h2>
 		</div>
 	</div>
@@ -118,7 +120,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h3>
 		</div>
 	</div>
@@ -127,7 +129,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h4>
 		</div>
 	</div>
@@ -136,7 +138,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h5>
 		</div>
 	</div>
@@ -145,7 +147,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h6>
 		</div>
 	</div>
@@ -168,9 +170,21 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
+									Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.
 							</p>
 		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">WYSIWYG Text Styles</div>
+		<div class="constrain-text">
+							<p class="pl-snug">This is a <a href="#">text link.</a></p>
+										<p class="pl-snug">Bold text is used to show <strong>strong text</strong> without using a header.</p>
+										<p class="pl-snug">Italics are for <em>special emphasis</em> and <em>proper titles.</em></p>
+										<p class="pl-snug">Highlight adds a <mark>mark element</mark> that draws a user's eye and alerts assistive technologys.</p>
+										<p class="pl-snug">Small text used for items of <small>secondary importance</small> like side comments or notes.</p>
+										<p class="pl-snug"><div class="warning">Warning text is an in-text alert that styles high-priority statements.</div></p>
+					</div>
 	</div>
 
 
@@ -210,10 +224,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1574441242">
+<script id="pl-js-polyfill-insert-1574448715">
   (function() {
     if (self != top) {
-      var cb = '1574441242';
+      var cb = '1574448715';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -223,10 +237,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1574441242">
+<script id="pl-js-insert-1574448715">
   (function() {
     if (self != top) {
-      var cb = '1574441242';
+      var cb = '1574448715';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
