--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
@@ -1,9 +1,10 @@
 
+
 	<div class="typography-element">
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h1>
 		</div>
 	</div>
@@ -12,7 +13,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h2>
 		</div>
 	</div>
@@ -21,7 +22,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h3>
 		</div>
 	</div>
@@ -30,7 +31,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h4>
 		</div>
 	</div>
@@ -39,7 +40,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h5>
 		</div>
 	</div>
@@ -48,7 +49,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Veggies sunt bona vobis, proinde vos postulo
 							</h6>
 		</div>
 	</div>
@@ -71,8 +72,20 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
+									Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.
 							</p>
 		</div>
+	</div>
+
+	<div class="typography-element">
+		<div class="element-title">WYSIWYG Text Styles</div>
+		<div class="constrain-text">
+							<p class="pl-snug">This is a <a href="#">text link.</a></p>
+										<p class="pl-snug">Bold text is used to show <strong>strong text</strong> without using a header.</p>
+										<p class="pl-snug">Italics are for <em>special emphasis</em> and <em>proper titles.</em></p>
+										<p class="pl-snug">Highlight adds a <mark>mark element</mark> that draws a user's eye and alerts assistive technologys.</p>
+										<p class="pl-snug">Small text used for items of <small>secondary importance</small> like side comments or notes.</p>
+										<p class="pl-snug"><div class="warning">Warning text is an in-text alert that styles high-priority statements.</div></p>
+					</div>
 	</div>
 
