--- a/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
@@ -13,31 +13,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td>ham hock ribeye</td>
-											<td>Lorem ipsum</td>
-											<td>ham hock ribeye</td>
-											<td>TGI Filet mignon</td>
+																<td>dolor sit amet</td>
+											<td>Blog meme masthead</td>
+											<td>biltong</td>
+											<td>bean burdock</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>optimization</td>
-											<td>biltong</td>
-											<td>Project Thunderdome</td>
+																<td>Lorem ipsum</td>
 											<td> </td>
+											<td>bean burdock</td>
+											<td>jerky rump shoulder</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td> </td>
-											<td>biltong</td>
-											<td>Tuesday night</td>
+																<td>ham hock ribeye</td>
 											<td>Friday</td>
+											<td>Blog meme masthead</td>
+											<td>biltong</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td> </td>
-											<td>Tuesday night</td>
-											<td>Hong Kong Phooey chop</td>
+																<td>Tuesday night</td>
+											<td>jerky rump shoulder</td>
 											<td>biltong</td>
+											<td>bean burdock</td>
 									</tr>
 					</tbody>
 	</table>
