--- a/pattern-lab/public/patterns/00-base/index.html
+++ b/pattern-lab/public/patterns/00-base/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575326814" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575326814" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1575499530" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575499530" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575326814" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575499530" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575326814" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575326814" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575499530" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575499530" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -221,13 +221,13 @@
       <li>
       <div class="font-info" style="font-family: &quot;Open Sans&quot;, Helvetica, Arial, sans-serif;">
         <span style="font-size: 32px;">Open Sans</span> <br/>
-                				  <p>CTR mthomps Flipboard do what you do best and link to the rest Buttry media bias Journal Register RT, newspaper strike do what you do best and link to the rest semipermeable learnings cognitive surplus mathewi, Encyclo Google News.</p>
+                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
 				      </div>
     </li>
       <li>
       <div class="font-info" style="font-family: Georgia, &quot;Times New Roman&quot;, Times, serif;">
         <span style="font-size: 32px;">Georgia</span> <br/>
-                				  <p>CTR mthomps Flipboard do what you do best and link to the rest Buttry media bias Journal Register RT, newspaper strike do what you do best and link to the rest semipermeable learnings cognitive surplus mathewi, Encyclo Google News.</p>
+                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
 				      </div>
     </li>
   </ul>
@@ -275,10 +275,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575326814">
+<script id="pl-js-polyfill-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -288,10 +288,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575326814">
+<script id="pl-js-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
