--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
@@ -2,9 +2,9 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+			<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
 		<hr>
-			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
 			<p>Tattooed Williamsburg. Jean shorts proident kogi laboris. Non tote bag pariatur elit slow-carb, Vice irure eu Echo Park ea aliqua chillwave. Cornhole Etsy quinoa Pinterest cardigan. Excepteur quis forage, Blue Bottle keffiyeh velit hoodie direct trade typewriter Etsy. Fingerstache squid non, sriracha drinking vinegar Shoreditch pork belly. Paleo sartorial mollit 3 wolf moon chambray whatever, sed tote bag small batch freegan. Master cleanse.</p>
+			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
 	
 </div>
