--- a/pattern-lab/public/patterns/01-parts-05-lists/index.html
+++ b/pattern-lab/public/patterns/01-parts-05-lists/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575326814" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575326814" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1575499530" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575499530" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575326814" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575499530" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575326814" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575326814" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575499530" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575499530" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -138,32 +138,32 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
 							<li>Negat esse eam</li>
-							<li>Negat esse eam</li>
+							<li>Quae cum essent dicta</li>
 						</ul>
 		</li>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ul>
 </div>
 
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
 							<li>Negat esse eam</li>
-							<li>Negat esse eam</li>
+							<li>Quae cum essent dicta</li>
 						</ol>
 		</li>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ol>
 </div>
 
@@ -211,10 +211,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575326814">
+<script id="pl-js-polyfill-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -224,10 +224,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575326814">
+<script id="pl-js-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
