--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,10 +1,9 @@
 
 	<div class="drupal-message status-message">
-					You are awesome at life!
+					Congratulations, you're the best!
 			</div>
 	<div class="drupal-message warning-message">
-					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
-
+					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
 					We're sorry, but we're having trouble finding things you are not awesome at!
