--- a/pattern-lab/public/patterns/01-parts/index.html
+++ b/pattern-lab/public/patterns/01-parts/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575326814" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575326814" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575326814" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1575499530" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1575499530" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575499530" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575326814" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575499530" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575326814" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575326814" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575499530" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575499530" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -150,7 +150,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h1>
 		</div>
 	</div>
@@ -159,7 +159,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h2>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h3>
 		</div>
 	</div>
@@ -177,7 +177,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h4>
 		</div>
 	</div>
@@ -186,7 +186,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h5>
 		</div>
 	</div>
@@ -195,7 +195,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h6>
 		</div>
 	</div>
@@ -208,7 +208,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Quae cum essent dicta
+											Negat esse eam
 									</h1>
 			</div>
 		</div>
@@ -218,7 +218,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.
+									Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;
 							</p>
 		</div>
 	</div>
@@ -340,10 +340,10 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+			<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
 		<hr>
-			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
 			<p>Tattooed Williamsburg. Jean shorts proident kogi laboris. Non tote bag pariatur elit slow-carb, Vice irure eu Echo Park ea aliqua chillwave. Cornhole Etsy quinoa Pinterest cardigan. Excepteur quis forage, Blue Bottle keffiyeh velit hoodie direct trade typewriter Etsy. Fingerstache squid non, sriracha drinking vinegar Shoreditch pork belly. Paleo sartorial mollit 3 wolf moon chambray whatever, sed tote bag small batch freegan. Master cleanse.</p>
+			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
 	
 </div>
   </div>
@@ -386,32 +386,32 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
 							<li>Negat esse eam</li>
-							<li>Negat esse eam</li>
+							<li>Quae cum essent dicta</li>
 						</ul>
 		</li>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ul>
 </div>
 
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
 							<li>Negat esse eam</li>
-							<li>Negat esse eam</li>
+							<li>Quae cum essent dicta</li>
 						</ol>
 		</li>
-					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 					<li>Nesciunt sunt cillum keytar Pitchfork</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 			</ol>
 </div>
 
@@ -643,31 +643,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td>ham hock ribeye</td>
-											<td>Lorem ipsum</td>
-											<td>ham hock ribeye</td>
-											<td>TGI Filet mignon</td>
+																<td>dolor sit amet</td>
+											<td>Blog meme masthead</td>
+											<td>biltong</td>
+											<td>bean burdock</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>optimization</td>
-											<td>biltong</td>
-											<td>Project Thunderdome</td>
+																<td>Lorem ipsum</td>
 											<td> </td>
+											<td>bean burdock</td>
+											<td>jerky rump shoulder</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td> </td>
-											<td>biltong</td>
-											<td>Tuesday night</td>
+																<td>ham hock ribeye</td>
 											<td>Friday</td>
+											<td>Blog meme masthead</td>
+											<td>biltong</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td> </td>
-											<td>Tuesday night</td>
-											<td>Hong Kong Phooey chop</td>
+																<td>Tuesday night</td>
+											<td>jerky rump shoulder</td>
 											<td>biltong</td>
+											<td>bean burdock</td>
 									</tr>
 					</tbody>
 	</table>
@@ -721,11 +721,10 @@
   <div class="sg-pattern-example">
     
 	<div class="drupal-message status-message">
-					You are awesome at life!
+					Congratulations, you're the best!
 			</div>
 	<div class="drupal-message warning-message">
-					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
-
+					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
 					We're sorry, but we're having trouble finding things you are not awesome at!
@@ -774,10 +773,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575326814">
+<script id="pl-js-polyfill-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -787,10 +786,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575326814">
+<script id="pl-js-insert-1575499530">
   (function() {
     if (self != top) {
-      var cb = '1575326814';
+      var cb = '1575499530';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
