--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,10 +1,11 @@
 
 	<div class="drupal-message status-message">
-					Congratulations, you're the best!
+					Landing page <a href="#">My Great Page</a> has been updated!
+
 			</div>
 	<div class="drupal-message warning-message">
-					Beware of purse dog!
+					Any unsaved changes will be lost.
 			</div>
 	<div class="drupal-message error-message">
-					We're sorry, but we're having trouble finding things you are not awesome at!
+					Please contact someone and tell them about this error.
 			</div>
