--- a/pattern-lab/public/patterns/03-composites-02-paragraphs-01-accordion-accordion-group/03-composites-02-paragraphs-01-accordion-accordion-group.markup-only.html
+++ b/pattern-lab/public/patterns/03-composites-02-paragraphs-01-accordion-accordion-group/03-composites-02-paragraphs-01-accordion-accordion-group.markup-only.html
@@ -4,7 +4,7 @@
 			<div class="field-paragraphs">
 
 <div class="section backless">		<div class="section-item"><div class="paragraph paragraph--type--accordion-group">
-															<div class="widget-title">Accordion Group</div>
+															<div class="widget-title">Responsive and accessible accordions</div>
 			
 			<div class="widget-wrapper">				<div class="field field-accordion-item">
 											<div>
