--- a/pattern-lab/public/patterns/03-composites-02-paragraphs-04-gallery-pl-gallery/03-composites-02-paragraphs-04-gallery-pl-gallery.markup-only.html
+++ b/pattern-lab/public/patterns/03-composites-02-paragraphs-04-gallery-pl-gallery/03-composites-02-paragraphs-04-gallery-pl-gallery.markup-only.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-   <div class="widget-title">Gallery Widget</div>
+   <div class="widget-title">Slideshow or lightbox galleries</div>
 
 <div class="galleries-holder">
       <div class="paragraph--type--gallery slider">
