--- a/pattern-lab/public/patterns/03-composites-02-paragraphs-06-image-pl-image/03-composites-02-paragraphs-06-image-pl-image.html
+++ b/pattern-lab/public/patterns/03-composites-02-paragraphs-06-image-pl-image/03-composites-02-paragraphs-06-image-pl-image.html
@@ -99,25 +99,49 @@
         </li>
       </ul>
     </div>
-<!-- View All Patterns in a Pattern Sub-Type -->
-<div class="sg-main" role="main">
-  <!-- Patterns -->
-  <div id="sg-patterns">
-                  <div id="viewall-assembly-print" class="sg-subtype">
-  <h2>
-    <a href="../../patterns/05-assembly-01-print/index.html" class="patternLink" data-patternpartial="viewall-assembly-print">
-      print
-    </a>
-  </h2>
-  
-  <div class="sg-pattern-body">
-    
+
+<div class="pl-options image-options">
+  <div class="options-inner">
+    <div class="form-item">
+      <label for="image-size">Size</label>
+      <select name="image-size">
+      	<option value="default" selected>Original</option>
+        <option value="full">Full</option>
+        <option value="large">Large</option>
+        <option value="medium">Medium</option>
+        <option value="small">Small</option>
+      </select> 
+    </div>
   </div>
-</div>            </div> <!--end #sg-patterns-->
-</div><!--end .sg-main-->
+</div>
+
+	<div class="layout layout--onecol paragraphs-layout">
+		<div class="block-field block-field-paragraphs">
+			<div class="field-paragraphs">
+
+<div class="section backless">    <div class="section-item"><div class="paragraph paragraph--type--image">
+															<div class="widget-title">Display images in various sizes</div>
+			
+			<div class="widget-wrapper">    		
+<div class="image-wrapper default">
+			<a href="https://www.google.com" aria-label="Go to Link Title">
+						<article class="media media-image view-mode-default">
+				<div class="field-media-image">
+					<img src="http://placeimg.com/1100/600/people" />
+											<div class="field-caption">This is the caption</div>
+									</div>
+			</article>
+					</a>
+	</div>    	</div>
+			</div></div>  </div>
+
+			</div>
+		</div>
+	</div>
+	
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-assembly-print"}
+  {"cssEnabled":false,"lineage":[{"lineagePattern":"composites-paragraphs-field-item","lineagePath":"..\/..\/patterns\/03-composites-02-paragraphs-06-image-pl-image\/03-composites-02-paragraphs-06-image-pl-image.html"},{"lineagePattern":"composites-paragraph","lineagePath":"..\/..\/patterns\/03-composites-02-paragraphs-06-image-pl-image\/03-composites-02-paragraphs-06-image-pl-image.html"},{"lineagePattern":"composites-image","lineagePath":"..\/..\/patterns\/03-composites-02-paragraphs-06-image-pl-image\/03-composites-02-paragraphs-06-image-pl-image.html"}],"lineageR":[],"patternBreadcrumb":{"patternType":"composites","patternSubtype":"paragraphs"},"patternDesc":"","patternExtension":"twig","patternName":"Image","patternPartial":"composites-pl-image","patternState":"","extraOutput":[]}
 </script>
 
 <script>
