--- a/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
@@ -14,30 +14,30 @@
 							<tr>
 											<td>Row 1</td>
 																<td>dolor sit amet</td>
-											<td>Blog meme masthead</td>
-											<td>biltong</td>
-											<td>bean burdock</td>
+											<td>TGI Filet mignon</td>
+											<td>document cloud</td>
+											<td> </td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>Lorem ipsum</td>
-											<td> </td>
-											<td>bean burdock</td>
-											<td>jerky rump shoulder</td>
+																<td>Hong Kong Phooey chop</td>
+											<td>document cloud</td>
+											<td>A fava bean collard</td>
+											<td>dolor sit amet</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>ham hock ribeye</td>
-											<td>Friday</td>
-											<td>Blog meme masthead</td>
-											<td>biltong</td>
+																<td>Friday</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>jerky rump shoulder</td>
+											<td> </td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>Tuesday night</td>
-											<td>jerky rump shoulder</td>
-											<td>biltong</td>
-											<td>bean burdock</td>
+																<td>Blog meme masthead</td>
+											<td> </td>
+											<td>ham hock ribeye</td>
+											<td> </td>
 									</tr>
 					</tbody>
 	</table>
