--- a/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.html
+++ b/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1575656845" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1575656845" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575656845" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1575663264" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1575663264" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1575663264" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575656845" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1575663264" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575656845" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575656845" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1575663264" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1575663264" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -114,31 +114,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td>Friday</td>
-											<td>Lorem ipsum</td>
-											<td>Tuesday night</td>
-											<td> </td>
-									</tr>
-							<tr>
-											<td>Row 2</td>
-																<td>monetization</td>
-											<td>Hong Kong Phooey chop</td>
-											<td>Hong Kong Phooey chop</td>
+																<td>Project Thunderdome</td>
+											<td>Veggies sunt bona vobis</td>
 											<td>brussels sprout</td>
-									</tr>
-							<tr>
-											<td>Row 3</td>
-																<td>Lorem ipsum</td>
-											<td>optimization</td>
-											<td>Friday</td>
 											<td>dolor sit amet</td>
 									</tr>
 							<tr>
-											<td>Row 4</td>
-																<td>Tuesday night</td>
-											<td>biltong</td>
-											<td>document cloud</td>
+											<td>Row 2</td>
+																<td>document cloud</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>TGI Filet mignon</td>
+											<td>TGI Filet mignon</td>
+									</tr>
+							<tr>
+											<td>Row 3</td>
+																<td>Friday</td>
+											<td>brussels sprout</td>
+											<td>Tuesday night</td>
 											<td>number one super g</td>
+									</tr>
+							<tr>
+											<td>Row 4</td>
+																<td>dolor sit amet</td>
+											<td>number one super g</td>
+											<td>Blog meme masthead</td>
+											<td>A fava bean collard</td>
 									</tr>
 					</tbody>
 	</table>
@@ -180,10 +180,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1575656845">
+<script id="pl-js-polyfill-insert-1575663264">
   (function() {
     if (self != top) {
-      var cb = '1575656845';
+      var cb = '1575663264';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -193,10 +193,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1575656845">
+<script id="pl-js-insert-1575663264">
   (function() {
     if (self != top) {
-      var cb = '1575656845';
+      var cb = '1575663264';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
