--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,12 +1,11 @@
 
 	<div class="drupal-message status-message">
-					Landing page <a href="#">My Great Page</a> has been updated!
-
+					Congratulations, you're the best!
 			</div>
 	<div class="drupal-message warning-message">
-					Beware of purse dog!
+					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
+
 			</div>
 	<div class="drupal-message error-message">
-					1 error has been found: <a href="#">Image</a>
-
+					Please contact someone and tell them about this error.
 			</div>
