--- a/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
+++ b/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
@@ -3,13 +3,14 @@
       <li>
       <div class="font-info" style="font-family: &quot;Open Sans&quot;, Helvetica, Arial, sans-serif;">
         <span style="font-size: 32px;">Open Sans</span> <br/>
-                				  <p>Bush tomato gumbo potato garbanzo ricebean burdock daikon coriander kale quandong. Bok choy celery leek avocado shallot horseradish aubergine parsley. Bok choy bell pepper kale celery desert raisin kakadu plum bok choy bunya nuts.</p>
+                				  <p>CTR mthomps Flipboard do what you do best and link to the rest Buttry media bias Journal Register RT, newspaper strike do what you do best and link to the rest semipermeable learnings cognitive surplus mathewi, Encyclo Google News.</p>
 				      </div>
     </li>
       <li>
       <div class="font-info" style="font-family: Georgia, &quot;Times New Roman&quot;, Times, serif;">
         <span style="font-size: 32px;">Georgia</span> <br/>
-                				  <p>Bush tomato gumbo potato garbanzo ricebean burdock daikon coriander kale quandong. Bok choy celery leek avocado shallot horseradish aubergine parsley. Bok choy bell pepper kale celery desert raisin kakadu plum bok choy bunya nuts.</p>
+                				  <p>CTR mthomps Flipboard do what you do best and link to the rest Buttry media bias Journal Register RT, newspaper strike do what you do best and link to the rest semipermeable learnings cognitive surplus mathewi, Encyclo Google News.</p>
 				      </div>
     </li>
   </ul>
+ 
