--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
@@ -2,9 +2,9 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
+			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
 		<hr>
-			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
+			<p>It&#039;s a pretty story. Sharing everything with fun, that&#039;s the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you&#039;ve got a problem chum, think how it could be. This is my boss, Jonathan Hart, a self-made millionaire, he&#039;s quite a guy. This is Mrs H., she&#039;s gorgeous, she&#039;s one lady who knows how to take care of herself.</p>
 			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
 	
 </div>
