--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -7,6 +7,5 @@
 					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
-					1 error has been found: <a href="#">Image</a>
-
+					Please contact someone and tell them about this error.
 			</div>
