--- a/pattern-lab/public/patterns/01-parts/index.html
+++ b/pattern-lab/public/patterns/01-parts/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1576180361" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1576189832" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576189832" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576180361" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576189832" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576180361" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576180361" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576189832" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576189832" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -150,7 +150,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h1>
 		</div>
 	</div>
@@ -159,7 +159,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h2>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h3>
 		</div>
 	</div>
@@ -177,7 +177,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h4>
 		</div>
 	</div>
@@ -186,7 +186,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h5>
 		</div>
 	</div>
@@ -195,7 +195,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Veggies sunt bona vobis, proinde vos postulo
+									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
 							</h6>
 		</div>
 	</div>
@@ -218,7 +218,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.
+									Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.
 							</p>
 		</div>
 	</div>
@@ -340,9 +340,9 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
+			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
 		<hr>
-			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
+			<p>It&#039;s a pretty story. Sharing everything with fun, that&#039;s the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you&#039;ve got a problem chum, think how it could be. This is my boss, Jonathan Hart, a self-made millionaire, he&#039;s quite a guy. This is Mrs H., she&#039;s gorgeous, she&#039;s one lady who knows how to take care of herself.</p>
 			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
 	
 </div>
@@ -386,15 +386,15 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Veggies sunt bona vobis, proinde vos</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
-							<li>Quae cum essent dicta</li>
+							<li>Philosophi autem in</li>
 							<li>Negat esse eam</li>
 						</ul>
 		</li>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Hong Kong Phooey, number one super g</li>
 					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 			</ul>
 </div>
@@ -402,15 +402,15 @@
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Veggies sunt bona vobis, proinde vos</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
-							<li>Quae cum essent dicta</li>
+							<li>Philosophi autem in</li>
 							<li>Negat esse eam</li>
 						</ol>
 		</li>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Hong Kong Phooey, number one super g</li>
 					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 			</ol>
 </div>
@@ -643,31 +643,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td> </td>
-											<td>Blog meme masthead</td>
-											<td>Hong Kong Phooey chop</td>
-											<td>Hong Kong Phooey chop</td>
+																<td>Tuesday night</td>
+											<td>biltong</td>
+											<td>brussels sprout</td>
+											<td>bean burdock</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td> </td>
-											<td>monetization</td>
-											<td>Tuesday night</td>
-											<td>TGI Filet mignon</td>
+																<td>ham hock ribeye</td>
+											<td>optimization</td>
+											<td>bean burdock</td>
+											<td>ham hock ribeye</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>jerky rump shoulder</td>
-											<td>A fava bean collard</td>
-											<td> </td>
-											<td>monetization</td>
+																<td>Project Thunderdome</td>
+											<td>Project Thunderdome</td>
+											<td>optimization</td>
+											<td>brussels sprout</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>monetization</td>
-											<td>Tuesday night</td>
-											<td> </td>
+																<td>TGI Filet mignon</td>
+											<td>ham hock ribeye</td>
 											<td>optimization</td>
+											<td>ham hock ribeye</td>
 									</tr>
 					</tbody>
 	</table>
@@ -728,8 +728,7 @@
 					Beware of purse dog!
 			</div>
 	<div class="drupal-message error-message">
-					1 error has been found: <a href="#">Image</a>
-
+					Please contact someone and tell them about this error.
 			</div>
 
   </div>
@@ -775,10 +774,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1576180361">
+<script id="pl-js-polyfill-insert-1576189832">
   (function() {
     if (self != top) {
-      var cb = '1576180361';
+      var cb = '1576189832';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -788,10 +787,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1576180361">
+<script id="pl-js-insert-1576189832">
   (function() {
     if (self != top) {
-      var cb = '1576180361';
+      var cb = '1576189832';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
