--- a/pattern-lab/public/patterns/02-chunks/index.html
+++ b/pattern-lab/public/patterns/02-chunks/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1576180361" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1576180361" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576180361" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1576189832" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1576189832" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576189832" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576180361" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576189832" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576180361" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576180361" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576189832" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576189832" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -152,7 +152,7 @@
   </div>
   
   <script type="text/json" id="sg-pattern-data-chunks-breadcrumbs" class="sg-pattern-data">
-    {"lineage":[],"lineageR":[],"patternBreadcrumb":{"patternType":"chunks","patternSubtype":"navigation"},"patternDesc":"","patternExtension":"twig","patternName":"breadcrumbs","patternPartial":"chunks-breadcrumbs","patternState":""}
+    {"lineage":[],"lineageR":[{"lineagePattern":"units-pl-landing-page","lineagePath":"..\/..\/patterns\/04-units-02-content-types-01-landing-page-pl-landing-page\/04-units-02-content-types-01-landing-page-pl-landing-page.html"}],"patternBreadcrumb":{"patternType":"chunks","patternSubtype":"navigation"},"patternDesc":"","patternExtension":"twig","patternName":"breadcrumbs","patternPartial":"chunks-breadcrumbs","patternState":""}
   </script>
 </div><!--end .sg-pattern-->                        <div id="chunks-superfish" class="sg-pattern">
   <div class="sg-pattern-head">
@@ -601,10 +601,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1576180361">
+<script id="pl-js-polyfill-insert-1576189832">
   (function() {
     if (self != top) {
-      var cb = '1576180361';
+      var cb = '1576189832';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -614,10 +614,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1576180361">
+<script id="pl-js-insert-1576189832">
   (function() {
     if (self != top) {
-      var cb = '1576180361';
+      var cb = '1576189832';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
