--- a/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-07-tables-tables/01-parts-07-tables-tables.markup-only.html
@@ -13,31 +13,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td>dolor sit amet</td>
-											<td>Project Thunderdome</td>
-											<td>dolor sit amet</td>
-											<td>number one super g</td>
+																<td>ham hock ribeye</td>
+											<td>biltong</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>monetization</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>jerky rump shoulder</td>
-											<td>number one super g</td>
-											<td>number one super g</td>
-											<td>optimization</td>
+																<td>biltong</td>
+											<td>Hong Kong Phooey chop</td>
+											<td>dolor sit amet</td>
+											<td>Hong Kong Phooey chop</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>A fava bean collard</td>
-											<td>monetization</td>
-											<td> </td>
-											<td>dolor sit amet</td>
+																<td>dolor sit amet</td>
+											<td>Friday</td>
+											<td>ham hock ribeye</td>
+											<td>TGI Filet mignon</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>bean burdock</td>
-											<td>Lorem ipsum</td>
-											<td>jerky rump shoulder</td>
+																<td>dolor sit amet</td>
 											<td>Veggies sunt bona vobis</td>
+											<td>document cloud</td>
+											<td>Project Thunderdome</td>
 									</tr>
 					</tbody>
 	</table>
