--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
@@ -4,7 +4,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h1>
 		</div>
 	</div>
@@ -13,7 +13,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h2>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h3>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h4>
 		</div>
 	</div>
@@ -40,7 +40,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h5>
 		</div>
 	</div>
@@ -49,7 +49,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM
+									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
 							</h6>
 		</div>
 	</div>
@@ -72,7 +72,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.
+									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
 							</p>
 		</div>
 	</div>
