--- a/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-04-hr-hr/01-parts-04-hr-hr.markup-only.html
@@ -2,9 +2,9 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
+			<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
 		<hr>
+			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
 			<p>It&#039;s a pretty story. Sharing everything with fun, that&#039;s the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you&#039;ve got a problem chum, think how it could be. This is my boss, Jonathan Hart, a self-made millionaire, he&#039;s quite a guy. This is Mrs H., she&#039;s gorgeous, she&#039;s one lady who knows how to take care of herself.</p>
-			<p>Tattooed Williamsburg. Jean shorts proident kogi laboris. Non tote bag pariatur elit slow-carb, Vice irure eu Echo Park ea aliqua chillwave. Cornhole Etsy quinoa Pinterest cardigan. Excepteur quis forage, Blue Bottle keffiyeh velit hoodie direct trade typewriter Etsy. Fingerstache squid non, sriracha drinking vinegar Shoreditch pork belly. Paleo sartorial mollit 3 wolf moon chambray whatever, sed tote bag small batch freegan. Master cleanse.</p>
 	
 </div>
