--- a/pattern-lab/public/patterns/01-parts-05-lists-lists/01-parts-05-lists-lists.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-05-lists-lists/01-parts-05-lists-lists.markup-only.html
@@ -2,32 +2,32 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Bacon ipsum dolor sit amet spare rib</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
+							<li>Quae cum essent dicta</li>
 							<li>Philosophi autem in</li>
-							<li>Negat esse eam</li>
 						</ul>
 		</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 					<li>Hong Kong Phooey, number one super g</li>
-					<li>Nesciunt sunt cillum keytar Pitchfork</li>
 			</ul>
 </div>
 
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Blog meme masthead DocumentCloud Fou</li>
+					<li>Bacon ipsum dolor sit amet spare rib</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
+							<li>Quae cum essent dicta</li>
 							<li>Philosophi autem in</li>
-							<li>Negat esse eam</li>
 						</ol>
 		</li>
+					<li>Blog meme masthead DocumentCloud Fou</li>
 					<li>Hong Kong Phooey, number one super g</li>
-					<li>Nesciunt sunt cillum keytar Pitchfork</li>
 			</ol>
 </div>
 
