--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,11 +1,11 @@
 
 	<div class="drupal-message status-message">
-					Landing page <a href="#">My Great Page</a> has been updated!
-
+					Congratulations, you're the best!
 			</div>
 	<div class="drupal-message warning-message">
-					Beware of purse dog!
+					Any unsaved changes will be lost.
 			</div>
 	<div class="drupal-message error-message">
-					Please contact someone and tell them about this error.
+					1 error has been found: <a href="#">Image</a>
+
 			</div>
