--- a/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-02-typography-typography/01-parts-02-typography-typography.markup-only.html
@@ -4,7 +4,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h1>
 		</div>
 	</div>
@@ -13,7 +13,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h2>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h3>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h4>
 		</div>
 	</div>
@@ -40,7 +40,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h5>
 		</div>
 	</div>
@@ -49,7 +49,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h6>
 		</div>
 	</div>
@@ -62,7 +62,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Quae cum essent dicta
+											Negat esse eam
 									</h1>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
+									Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;
 							</p>
 		</div>
 	</div>
