--- a/pattern-lab/public/patterns/04-units-02-content-types-05-news-pl-news/04-units-02-content-types-05-news-pl-news.markup-only.html
+++ b/pattern-lab/public/patterns/04-units-02-content-types-05-news-pl-news/04-units-02-content-types-05-news-pl-news.markup-only.html
@@ -63,16 +63,15 @@
 			</div>																					
 <div class="block-field block-title">
 				<div class="field title">
-			<h1 class="page-title">News Article Example</h1>
-					</div>
+			<h1 class="page-title">News Article Example</h1>					</div>
 	</div>																					
 <div class="block-field block-created">
 									<span>December 13, 2019</span>
 				</div>																					
 <div class="block-field block-body">
 				<div class="field body text-with-summary">
-							<p>Like button audience atomization overcome Colbert bump Free Darko inverted pyramid we will make them pay, digital circulation strategy Like button totally blowing up on Twitter church of the savvy. Pictures of Goats section open source discuss Frontline analog thinking filters paidContent.</p>
-							<p>Beats all you&#039;ve ever saw, been in trouble with the law since the day they was born. Straight&#039;nin&#039; the curve, flat&#039;nin&#039; the hills. Someday the mountain might get &#039;em, but the law never will. Makin&#039; their way, the only way they know how, that&#039;s just a little bit more than the law will allow. Just good ol&#039; boys, wouldn&#039;t change if they could, fightin&#039; the system like a true modern day Robin Hood.</p>
+							<p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p>
+							<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
 					</div>
 	</div>																			    </div>
   </div>							</section>
