--- a/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
+++ b/pattern-lab/public/patterns/00-base-fonts-fonts/00-base-fonts-fonts.markup-only.html
@@ -3,13 +3,13 @@
       <li>
       <div class="font-info" style="font-family: &quot;Open Sans&quot;, Helvetica, Arial, sans-serif;">
         <span style="font-size: 32px;">Open Sans</span> <br/>
-                				  <p>Doner biltong turducken leberkas. Rump swine pork loin ribeye ball tip meatloaf, pork chop ground round pig pancetta cow biltong brisket. Beef corned beef beef ribs, bacon pork belly sausage meatball boudin doner ham hock. Swine gro.</p>
+                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
 				      </div>
     </li>
       <li>
       <div class="font-info" style="font-family: Georgia, &quot;Times New Roman&quot;, Times, serif;">
         <span style="font-size: 32px;">Georgia</span> <br/>
-                				  <p>Doner biltong turducken leberkas. Rump swine pork loin ribeye ball tip meatloaf, pork chop ground round pig pancetta cow biltong brisket. Beef corned beef beef ribs, bacon pork belly sausage meatball boudin doner ham hock. Swine gro.</p>
+                				  <p>Negat enim summo bono afferre incrementum diem. Tecum optime, deinde etiam cum mediocri amico. Duo Reges: constructio interrete. Quod dicit Epicurus etiam de voluptate, quae minime sint voluptates.</p>
 				      </div>
     </li>
   </ul>
