--- a/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
+++ b/pattern-lab/public/patterns/01-parts-09-messages-messages/01-parts-09-messages-messages.markup-only.html
@@ -1,9 +1,11 @@
 
 	<div class="drupal-message status-message">
-					Congratulations, you're the best!
+					Landing page <a href="#">My Great Page</a> has been updated!
+
 			</div>
 	<div class="drupal-message warning-message">
-					Any unsaved changes will be lost.
+					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
+
 			</div>
 	<div class="drupal-message error-message">
 					1 error has been found: <a href="#">Image</a>
