--- a/pattern-lab/public/patterns/01-parts/index.html
+++ b/pattern-lab/public/patterns/01-parts/index.html
@@ -4,18 +4,18 @@
     <title>Pattern Lab</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../../../dist/style.css?1576270387" media="all" />
-     <link rel="stylesheet" href="../../../../dist/guide.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick.css?1576270387" media="all" />
-    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576270387" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../../../dist/style.css?1576270679" media="all" />
+     <link rel="stylesheet" href="../../../../dist/guide.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../js/select2/select2.min.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../js/featherlight/featherlight.gallery.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick.css?1576270679" media="all" />
+    <link rel="stylesheet" href="../../js/slick/slick-theme.css?1576270679" media="all" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/813efb9b80.js" crossorigin="anonymous"></script>
     <noscript>
-      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576270387" media="all" />
+      <link rel="stylesheet" href="https://kit.fontawesome.com/813efb9b80.css?1576270679" media="all" />
     </noscript>
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -25,8 +25,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576270387" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576270387" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1576270679" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1576270679" media="all" />
     <!-- End Pattern Lab -->
 
   </head>
@@ -150,7 +150,7 @@
 		<div class="element-title">H1</div>
 		<div class="constrain-text">
 			<h1>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h1>
 		</div>
 	</div>
@@ -159,7 +159,7 @@
 		<div class="element-title">H2</div>
 		<div class="constrain-text">
 			<h2>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h2>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 		<div class="element-title">H3</div>
 		<div class="constrain-text">
 			<h3>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h3>
 		</div>
 	</div>
@@ -177,7 +177,7 @@
 		<div class="element-title">H4</div>
 		<div class="constrain-text">
 			<h4>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h4>
 		</div>
 	</div>
@@ -186,7 +186,7 @@
 		<div class="element-title">H5</div>
 		<div class="constrain-text">
 			<h5>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h5>
 		</div>
 	</div>
@@ -195,7 +195,7 @@
 		<div class="element-title">H6</div>
 		<div class="constrain-text">
 			<h6>
-									Bacon ipsum dolor sit amet turducken strip steak beef ribs shank
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 							</h6>
 		</div>
 	</div>
@@ -208,7 +208,7 @@
 			</div>
 			<div class="block-title">
 				<h1>
-											Quae cum essent dicta
+											Negat esse eam
 									</h1>
 			</div>
 		</div>
@@ -218,7 +218,7 @@
 		<div class="element-title">Paragraph</div>
 		<div class="constrain-text">
 			<p>
-									Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.
+									Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;
 							</p>
 		</div>
 	</div>
@@ -340,10 +340,10 @@
 <div class="constrain-text">
 	<p>Horizontal rules are used to separate large chunks of content into sections that are easier for a user to read and process.</p>
 
-			<p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p>
+			<p>Aufert enim sensus actionemque tollit omnem. Videamus animi partes, quarum est conspectus illustrior; Philosophi autem in suis lectulis plerumque moriuntur. Quibus natura iure responderit non esse verum aliunde finem beate vivendi, a se principia rei gerendae peti;</p>
 		<hr>
-			<p>Pulse mathewi Project Thunderdome digital first. HuffPo social media optimization try PR dying the notion of the public monetization data visualization audience atomization overcome community, libel lawyer twitterati should isn&#039;t a business model fair use innovation Facebook AOL, Walter Cronkite died for your sins horse-race coverage crowdfunding Patch but what&#039;s the business model rubber cement horse-race coverage. Lucius Nieman content farm.</p>
-			<p>It&#039;s a pretty story. Sharing everything with fun, that&#039;s the way to be. One for all and all for one, Muskehounds are always ready. One for all and all for one, helping everybody. One for all and all for one, can sound pretty corny. If you&#039;ve got a problem chum, think how it could be. This is my boss, Jonathan Hart, a self-made millionaire, he&#039;s quite a guy. This is Mrs H., she&#039;s gorgeous, she&#039;s one lady who knows how to take care of herself.</p>
+			<p>Spinach tigernut. Corn cucumber grape black-eyed pea asparagus spinach avocado dulse bunya nuts epazote celery desert raisin celtuce burdock plantain yarrow napa cabbage. Plantain okra seakale endive tigernut pea sprouts asparagus corn chard peanut beet greens groundnut radicchio carrot coriander gumbo gram celtuce. Jícama nori bamboo shoot collard greens okra radicchio tomato. Catsear mustard corn tigernut celery kale water spinach bok choy.</p>
+			<p>Inde igitur, inquit, ordiendum est. Cui Tubuli nomen odio non est? Ne amores quidem sanctos a sapiente alienos esse arbitrantur. Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. Hoc non est positum in nostra actione. Sed quid sentiat, non videtis.</p>
 	
 </div>
   </div>
@@ -386,32 +386,32 @@
 <div class="text-long constrain-text pl-space">
 	<div class="element-title">Bullet List</div>
 	<ul>
-					<li>Bacon ipsum dolor sit amet spare rib</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested bullet list</strong>. Nested lists can either be either bulleted or numbered—regardless of the parent list type.
 			<ul>
 							<li>Quae cum essent dicta</li>
-							<li>Philosophi autem in</li>
+							<li>Negat esse eam</li>
 						</ul>
 		</li>
-					<li>Blog meme masthead DocumentCloud Fou</li>
-					<li>Hong Kong Phooey, number one super g</li>
+					<li>Veggies sunt bona vobis, proinde vos</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 			</ul>
 </div>
 
 <div class="text-long constrain-text">
 	<div class="element-title">Numbered List</div>
 	<ol>
-					<li>Bacon ipsum dolor sit amet spare rib</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 				<li>
 			Below is a <strong>nested number list</strong>.
 			<ol>
 							<li>Quae cum essent dicta</li>
-							<li>Philosophi autem in</li>
+							<li>Negat esse eam</li>
 						</ol>
 		</li>
-					<li>Blog meme masthead DocumentCloud Fou</li>
-					<li>Hong Kong Phooey, number one super g</li>
+					<li>Veggies sunt bona vobis, proinde vos</li>
+					<li>Multoque hoc melius nos veriusque quam Stoici.</li>
 			</ol>
 </div>
 
@@ -643,31 +643,31 @@
 		<tbody>
 							<tr>
 											<td>Row 1</td>
-																<td>ham hock ribeye</td>
-											<td>biltong</td>
-											<td>Hong Kong Phooey chop</td>
-											<td>monetization</td>
+																<td>bean burdock</td>
+											<td>Veggies sunt bona vobis</td>
+											<td> </td>
+											<td>brussels sprout</td>
 									</tr>
 							<tr>
 											<td>Row 2</td>
-																<td>biltong</td>
-											<td>Hong Kong Phooey chop</td>
+																<td>Veggies sunt bona vobis</td>
+											<td>Blog meme masthead</td>
+											<td>Project Thunderdome</td>
 											<td>dolor sit amet</td>
-											<td>Hong Kong Phooey chop</td>
 									</tr>
 							<tr>
 											<td>Row 3</td>
-																<td>dolor sit amet</td>
+																<td>Blog meme masthead</td>
 											<td>Friday</td>
-											<td>ham hock ribeye</td>
-											<td>TGI Filet mignon</td>
+											<td>Blog meme masthead</td>
+											<td>optimization</td>
 									</tr>
 							<tr>
 											<td>Row 4</td>
-																<td>dolor sit amet</td>
-											<td>Veggies sunt bona vobis</td>
-											<td>document cloud</td>
+																<td>A fava bean collard</td>
+											<td> </td>
 											<td>Project Thunderdome</td>
+											<td>Hong Kong Phooey chop</td>
 									</tr>
 					</tbody>
 	</table>
@@ -721,10 +721,12 @@
   <div class="sg-pattern-example">
     
 	<div class="drupal-message status-message">
-					Congratulations, you're the best!
+					Landing page <a href="#">My Great Page</a> has been updated!
+
 			</div>
 	<div class="drupal-message warning-message">
-					Any unsaved changes will be lost.
+					Don't put your hand on an active stove burner. <a href="#">Find out why!</a>
+
 			</div>
 	<div class="drupal-message error-message">
 					1 error has been found: <a href="#">Image</a>
@@ -774,10 +776,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1576270387">
+<script id="pl-js-polyfill-insert-1576270679">
   (function() {
     if (self != top) {
-      var cb = '1576270387';
+      var cb = '1576270679';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -787,10 +789,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1576270387">
+<script id="pl-js-insert-1576270679">
   (function() {
     if (self != top) {
-      var cb = '1576270387';
+      var cb = '1576270679';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
